--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,16 +1,7 @@
-log4j.rootLogger=DEBUG, file
-
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=C:\\Users\\puttaraju_r\\eclipse-workspace-new\\TestAutomation\\TestReport\\logs\\System.logs
-log4j.appender.file.MaxFileSize=5MB
-log4j.appender.file.MaxBackupIndex=10
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %C{1}::%M::%L - %m%n
-
-log4j.logger.Logger=DEBUG,dest1,stdout
+log4j.logger.Logger=INFO,dest1,stdout
 
 log4j.appender.dest1=org.apache.log4j.RollingFileAppender
-log4j.appender.dest1.File=C:\\Users\\puttaraju_r\\eclipse-workspace-new\\TestAutomation\\TestReport\\logs\\Application.logs
+log4j.appender.dest1.File=C:\\Users\\puttaraju_r\\eclipse-workspace-new\\TestAutomation\\TestAutomation\\TestReport\\logs\\Application.logs
 log4j.appender.dest1.MaxFileSize=5MB
 log4j.appender.dest1.MaxBackupIndex=10
 log4j.appender.dest1.layout=org.apache.log4j.PatternLayout
