--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.logger.Logger=INFO,dest1,stdout
+log4j.logger.Logger=TRACE,dest1,stdout
 
 log4j.appender.dest1=org.apache.log4j.RollingFileAppender
 log4j.appender.dest1.File=C:\\Users\\puttaraju_r\\eclipse-workspace-new\\TestAutomation\\TestAutomation\\TestReport\\logs\\Application.logs
